--- a/data/app.css
+++ b/data/app.css
@@ -10,6 +10,21 @@ h2 {
     color: #333;
 }
 
+.menu a {
+    margin-left: 10px;
+}
+
+#logContainer {
+    background-color: #000;
+    color: #00ff00;
+    padding: 10px;
+    border-radius: 5px;
+    height: 80vh;
+    overflow-y: scroll;
+    white-space: pre-wrap;
+    font-family: 'Courier New', monospace;
+}
+
 .device-container {
     display: flex;
     gap: 10px;
@@ -30,14 +45,15 @@ h2 {
     margin-bottom: 15px;
     border-radius: 5px;
 }
-.active
-{
+
+.active {
     color: green;
 }
-.inactive
-{
+
+.inactive {
     color: red;
 }
+
 .device-header {
     display: flex;
     justify-content: space-between;
@@ -63,6 +79,11 @@ h2 {
 .device-name[data-online="false"]::after {
     content: "offline";
     color: red;
+}
+
+button:disabled {
+    background-color: #cccccc;
+    cursor: not-allowed;
 }
 
 .device-info {
@@ -252,6 +273,7 @@ button {
 button:hover {
     background-color: #45a049;
 }
+
 /* 
 button.scan {
     background-color: #2196F3;
